# raider

raider_3197_description/: CMakeLists.txt  package.xml
raider_3197_description/launch/: raider_3197_gazebo.launch  raider_3197_xacro.launch
raider_3197_description/meshes/: raider_3197_shell.stl  raider_3197_shell.wings  raider_3197_wheel_front.stl  raider_3197_wheel_front.wings  raider_3197_wheel_rear.stl  raider_3197_wheel_rear.wings
raider_3197_description/urdf/: axle_joint.xacro  raider_3197.gazebo  raider_3197.xacro  suspension_joint.xacro  wheel_front_joint.xacro  wheel_front_link (copy 1).xacro  wheel_front_link.xacro  wheel_rear_joint.xacro  wheel_rear_link.xacro
raider_gazebo/: CMakeLists.txt  package.xml
raider_gazebo/launch/: configure_path.sh
raider_gazebo/resources/worlds/: empty.world  raider_3197.world
